<resources>
    <string name="app_name">Personal Finance</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="reapeat_password">Repeat Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="income">Check Income</string>
    <string name="expenditure">Check Expenditures</string>
    <string name="balance">Current Balance</string>
    <string name="title_ependiture">Expenditure History</string>
    <string name="title_income">Income History</string>
    <string name="category_add">Category</string>
    <string name="title_add">Title</string>
    <string name="date_add">Date</string>
    <string name="amount_add">Amount</string>
    <string name="transaction_add">Add Transaction</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="add_income">Add Income</string>



    <string name="search">Search</string>
    <string name="chooseFrom">Start Date</string>
    <string name="chooseTo">End Date</string>
    <string name="fromDate">From: </string>
    <string name="toDate">To: </string>


    <string name="type_prompt">Choose a Category</string>

    <string-array name="types_expenditure">
        <item>Food</item>
        <item>Travel</item>
        <item>Leisure</item>
        <item>Accommodation</item>
        <item>Other</item>
    </string-array>
    <string-array name="types_income">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
