<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="mah.thdta3.robin.android.assignment1.TransactionHistoryFragment">



        <TextView
            android:id="@+id/transactionhistoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_ependiture"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/fromDate"
                android:textSize="28sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/fromChooser"
                android:text="@string/chooseFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/toDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toDate"
                android:textSize="28sp" />

            <Button
                android:id="@+id/toChooser"
                android:text="@string/chooseTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
        <Button
            android:id="@+id/searchaway"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/search"/>


        <ListView
            android:id="@+id/transactionhistoryList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_green_light"
        app:rippleColor="@android:color/holo_green_light"
        app:srcCompat="@drawable/plus"
        android:layout_margin="16dp" />

</android.support.design.widget.CoordinatorLayout>